--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script type="module" src="/script.js"></script>
 </body>
 </html>
 
