--- a/index.html
+++ b/index.html
@@ -34,6 +34,14 @@
                         <option value="pearl">Pearl Auto Springs</option>
                         <option value="rajesh">Rajesh Cargo Movers(INDIA)Private Limited</option>
                         <option value="yash">Shri Yash Roadways</option>
+                        <option value="pmsprings">P M SPRINGS AND SPARES</option>
+                        <option value="bhushan">BHUSHAN LOGISTICS PVT LTD</option>
+                        <option value="jagadhatri">MAA JAGADHATRI ENGINEERING WORKS</option>
+                        <option value="amit">AMIT AUTO PARTS</option>
+                        <option value="asp">ASP ENGINEERING WORKS</option>
+                        <option value="vikas">VIKAS AUTOMOBILES & ENGINEERINGS</option>
+                        <option value="geoservices">Geoservices Maritime Pvt. Ltd.</option>
+                        <option value="sai">SAI TRAILERS</option>
                         <option value="other">Other</option>
                     </select>
                 </div>
